# mymadr

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  notas.txt  pyproject.toml
migrations/: env.py
migrations/versions/: 2232b9f071a3_recria_db.py  abcbbe64077f_create_tables.py  b96d5573801f_cria_o_banco.py
mymadr/: app.py  database.py  messages.py  models.py  schemas.py  security.py  settings.py
mymadr/routers/: accounts.py  books.py  contas.py  livros.py  novelist.py  romancistas.py
tests/: conftest.py  factories.py  test_accounts.py  test_app.py  test_books.py  test_cenarios.py  test_novelists.py  test_security.py
